deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-app-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: registerapp
  template:
    metadata:
      labels:
        app: registerapp
    spec:
      containers:
      - name: register-app
        image: anshu2390/register-app:1.0.0-21
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
