service.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-app-svc
  labels:
    app: registerapp
spec:
  selector:
    app: registerapp
  
  ports:
  - port: 8080
    targetPort: 8080
  
  type: ClusterIP
